# counekt

./: .gitignore  .replit  Pipfile  Procfile  RAWBYTECODE.txt  README.md  TEST run flask TEST  bytecode.txt  counekt.py  ctw.py  depF.txt  fcon.bat  offline.bat  online.bat  orgF.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  sclean.py  wsgi.py
.ebextensions/: python.config
app/: .env  __init__.py  config.py  email.py  etherscan.py  funcs.py  models.py  query.py
app/api/: users.py
app/auth/: __init__.py  funcs.py  routes.py
app/errors/: custom.py  handlers.py
app/main/: __init__.py  funcs.py  routes.py
app/models/: __init__.py  address.py  base.py  locationBase.py  location_base.py
app/profiles/: __init__.py  funcs.py  routes.py
app/routes/: funcs.py
app/solidity/: brownie-config.yaml
app/templates/: 404.html  about.html  base.html  datepicker.html  exonavbar.html  fiskefrikadeller.html  footer.html  help.html  info-loader.html  login.html  main.html  map.html  marketplace.html  navbar.html  no-results.html  notifications.html  photo.html  profile_page.html  register.html  settings.html
contracts/: administerable.sol  administrable.sol  idea.sol  shardable.sol  upgradable.sol  versionControl.sol  versionable.sol  votable.sol
db/migrations/: initial_migration.sql
migrations/versions/: 0168e7e195b0_.py  01da18e0ecf7_.py  02547ddc8dc0_.py  07357bab571b_.py  08fedf57a113_.py  090039c86e4a_.py  0f5606e5459f_.py  10d93bc8b470_tables.py  1236f2b03687_.py  1376f17e9d53_.py  1b5d4cf2bdda_tables.py  1b866f353347_.py  1f413c6b7c96_.py  22fea9ae2fbb_.py  2583eb7b7d0a_.py  348cf15e26e9_.py  (+72 more)
solidity/: brownie-config.yaml  package-lock.json  package.json
(+402 files in other folders)
